docs:article api swag init
